# slskd-exporter

./: Dockerfile  LICENSE  README.md  docker-compose.yml  metrics.md  pyproject.toml  swagger.json
grafana/: slskd-grafana-dashboard_v1.json
slskd_exporter/: cli.py  collector.py
